--- a/main.yaml
+++ b/main.yaml
@@ -81,12 +81,12 @@
     - name: Install Hashicorp Apps
       ansible.builtin.apt:
         name:
-          - consul
-          - packer
-          - terraform
-          - vault
-          - nomad
-          - waypoint
+          - consul=1.17.2-1
+          - packer=1.6.6+ds2-1+b1
+          - terraform=1.7.1-1
+          - vault=1.15.4-1
+          - nomad=1.7.3-1
+          - waypoint=0.11.4-1
         state: present
 
     - name: Start consul service
