--- a/roles/vault/tasks/main.yaml
+++ b/roles/vault/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: Install Hashicorp Apps
   ansible.builtin.apt:
     name:
-      - vault=1.15.4-1
+      - vault={{ vault_version }}
     state: present
 
 - name: Configure Files
@@ -26,14 +26,6 @@
       ansible.builtin.template:
         src: roles/vault/templates/vault.hcl.j2
         dest: "{{ vault_config_dir }}/vault.hcl"
-        owner: "vault"
-        group: "vault"
-        mode: "0644"
-
-    - name: Add vault env file
-      ansible.builtin.template:
-        src: roles/vault/templates/vault.env.j2
-        dest: "{{ vault_config_dir }}/vault.env"
         owner: "vault"
         group: "vault"
         mode: "0644"
